--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="title_activity_home_screen">HomeScreenActivity</string>
+    <string name="title_activity_driver_comparison">DriverComparisonActivity</string>
 </resources>
